<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cookie</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_search">Search!</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates!</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_more">More</string>
</resources>
