<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <group 
        android:menuCategory="container"
        android:icon="@drawable/ic_launcher"
        >
    -->
    <!--
             <item
            android:id="@+id/menu_faq"
            android:orderInCategory="1"
            android:showAsAction="always"
            android:title="FAQ"/>
        <item
            android:id="@+id/menu_feed"
            android:orderInCategory="2"
            android:showAsAction="always"
            android:title="Feedback"/>
    -->
    <!-- </group> -->


    <!-- Search / will display always -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>

    <!-- Location Found -->
    <item
        android:id="@+id/action_location_found"
        android:icon="@drawable/ic_action_location_found"
        android:showAsAction="always"
        android:title="@string/action_location_found"/>

    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="More">
        <menu>

            <!-- Refresh -->
            <item
                android:id="@+id/action_refresh"
                android:icon="@drawable/ic_action_refresh"
                android:showAsAction="never"
                android:title="@string/action_refresh"/>

            <!-- Help -->
            <item
                android:id="@+id/action_help"
                android:icon="@drawable/ic_action_help"
                android:showAsAction="never"
                android:title="@string/action_help"/>

            <!-- Check updates -->
            <item
                android:id="@+id/action_check_updates"
                android:icon="@drawable/ic_action_refresh"
                android:showAsAction="never"
                android:title="@string/action_check_updates"/>
        </menu>
    </item>

</menu>